--- a/_profiles/tinywpinmobile.html
+++ b/_profiles/tinywpinmobile.html
@@ -23,7 +23,7 @@ interval: 12
 #
 parameters:
   connectivity: "3G"
-  location: "Dulles_MotoG:Chrome"
+  location: "Dulles_MotoG4:Chrome"
   firstViewOnly: true
   runs: 1
   url: "https://www.tinywp.in"
